<resources>
    <string name="app_name">Auto_Translator</string>
    <string name="source_language">Source language</string>
    <string name="english">English</string>
    <string name="spanish">spanish</string>
    <string name="german">german</string>
    <string name="translation">Translation</string>
    <string name="write_something">Write Something</string>
    <string name="translationstring">Translation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_detect_language">Auto Detect Language</string>
</resources>